# more-itertools

./: .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST.in  Makefile  README.rst  dev_comb.py  exc.py  fabfile.py  local-tests.sh  mypy.ini  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: other-issues.md  propose-a-new-itertool.md
.github/workflows/: python-app.yml
.pytest_cache/v/cache/: lastfailed  nodeids
docs/: api.rst  conf.py  examples.rst  index.rst  license.rst  requirements.txt  testing.rst  toctree.rst  versions.rst
more_itertools/: __init__.py  chunked_alternate.py  collapse_comparison.py  examples.py  grouped.pyi  grouping.pyi  looking.pyi  more.py  more.pyi  recipes.py  recipes.pyi  slide  tests.py  windowing.pyi
more_itertools.egg-info/: PKG-INFO  SOURCES.txt
more_itertools/tests/: test_examples.py  test_more.py  test_recipes.py  tests.py
requirements/: development.txt  packaging.txt  testing.txt
tests/: test_more.py  test_recipes.py
