[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "more-itertools"
authors = [{name = "Erik Rose", email = "erikrose@grinchcentral.com"}]
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = [
    "itertools",
    "iterator",
    "iteration",
    "filter",
    "peek",
    "peekable",
    "chunk",
    "chunked",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/more-itertools/more-itertools"
Documentation = "https://more-itertools.readthedocs.io/en/stable/"

[tool.flit.module]
name = "more_itertools"

[project.optional-dependencies]
lint = [
    "ruff >= 0.8",
]

[tool.ruff]
indent-width = 4
line-length = 80
target-version = "py39"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = ["B904", "B028", "F841", "E741"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"__init__.pyi" = ["F401", "F403"]
"*.py" = ["E731"]
